fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,7 @@ a {
 /* FOOTER */
 
 footer {
+  margin-top: 30px;
   background-color: #333333;
   color: white;
 }
